// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1 1`] = `
<div
  data-testid="price-tag"
>
  <p>
    <del
      style={
        Object {
          "color": "grey",
        }
      }
    >
      $
      100
    </del>
    <a
      style={
        Object {
          "color": "red",
        }
      }
    >
      $
      50
    </a>
  </p>
</div>
`;

exports[`matches snapshot 2 1`] = `
<div
  data-testid="price-tag"
>
  <p>
    $
    100
  </p>
</div>
`;
